2010-03-08  Tobias C. Rittweiler <tcr@freebits.de>

	Make swank:connection-info include information about initially
	passed coding-system, and the resulting external-format of the
	socket. Debugging aid.

	* swank.lisp (connection.external-format): New function.
	(start-server, create-server): Pass down coding-system, not
	external-format.
	(setup-server): Pass down both, coding-system and external-format.
	(serve-connection): Ditto.
	(create-connection): Set coding-system slot of CONNECTION.
	(connection-info): Include coding-system and external-format.

2010-03-07  Helmut Eller  <heller@common-lisp.net>

	* swank-allegro.lisp (count-cr): Deleted.  No longer used.

2010-03-07  Helmut Eller  <heller@common-lisp.net>

	Handle src-locs of compiler warnings in Allegro 8.2.
	Didn't somebody already fix that?

	* swank-allegro.lisp (location-for-warning)
	(handle-undefined-functions-warning): In 8.2 src-locs include not
	only start but also and end positions.

2010-03-07  Stas Boukarev  <stassats@gmail.com>

	* swank-ecl.lisp (source-location): Don't do
	(setq file (tmpfile-to-buffer file)) in a COND condition,
	otherwise next cond clause will get null file.
	Apply translate-logical-pathname to pathnames.

2010-03-05  Helmut Eller  <heller@common-lisp.net>

	Remove some unused stuff.

	* swank-ccl.lisp (openmcl-set-debug-switches)
	(*interesting-internal-frames*)
	(interesting-frame-p): Unused. Deleted.

2010-03-05  Helmut Eller  <heller@common-lisp.net>

	* swank-ccl.lisp: Indentation fixes.

2010-03-05  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-ecl.lisp: Make backend depend on ECL version 10.3.1 which
	just got released. We do not support older versions. Previous
	version pretty much didn't work in combination with Slime anyway.

2010-03-05  Tobias C. Rittweiler <tcr@freebits.de>

	Ecl: Make M-. work on function interactively compiled via C-c C-c.

	* swank-ecl.lisp (*tmpfile-map*, note-buffer-tmpfile)
	(tmpfile-to-buffer): New helpers.